monticore-generator/src/test/resources/cocos/invalid/A0117/A0117.mc4
/* (c) https://github.com/MontiCore/monticore */

package cocos.invalid.A0117;

grammar A0117 {

  A;

  symbolrule B =
    isBla: boolean;

}
